[project]
name = "trnava"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-manager>=1.3.0",
    "adbc-driver-sqlite>=1.3.0",
    "gymnasium>=1.0.0",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "rich>=13.9.4",
    "torch>=2.5.1",
    "uxsim>=1.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
